<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<properties>
		<revision>1.9.7.BUILD-SNAPSHOT</revision>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- These properties will be set by the Maven Dependency plugin -->
		<errorProneJavac>${com.google.errorprone:javac:jar}</errorProneJavac>
	</properties>

	<groupId>org.aspectj</groupId>
	<artifactId>aspectj-parent</artifactId>
	<packaging>pom</packaging>
	<version>1.9.7.BUILD-SNAPSHOT</version>
	<name>AspectJ Parent Project</name>

	<modules>
		<module>util</module>
		<module>bridge</module>
		<module>testing-util</module>
		<module>org.aspectj.matcher</module>
		<module>asm</module>
		<module>testing-client</module>
		<module>ajbrowser</module>
		<module>runtime</module>
		<module>bcel-builder</module>
		<module>weaver</module>
		<module>loadtime</module>
		<module>org.eclipse.jdt.core</module>
		<module>org.aspectj.ajdt.core</module>
		<module>ajde.core</module>
		<module>ajde</module>
		<module>ajdoc</module>
		<module>taskdefs</module>
		<!--<module>testing</module>-->
		<!--<module>testing-drivers</module>-->
		<!--<module>tests</module>-->
		<module>build</module>
		<!--<module>run-all-junit-tests</module>-->
		<module>docs</module>

		<!-- create the important artifacts we care about -->
		<module>aspectjrt</module>
		<module>aspectjweaver</module>
		<module>aspectjtools</module>
		<module>aspectjmatcher</module>

		<!-- build the java -jar'able installer -->
		<module>installer</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
						<compilerArguments>
							<Xmaxerrs>10000</Xmaxerrs>
							<Xmaxwarns>10000</Xmaxwarns>
						</compilerArguments>
						<annotationProcessorPaths>
							<path>
								<groupId>org.checkerframework</groupId>
								<artifactId>checker</artifactId>
								<version>3.10.1-SNAPSHOT</version>
							</path>
						</annotationProcessorPaths>
						<annotationProcessors>
							<!-- Add all the checkers you want to enable here -->
							<annotationProcessor>org.checkerframework.checker.iteration.IterationChecker</annotationProcessor>
						</annotationProcessors>
						<compilerArgs>
							<!-- <arg>-Awarns</arg> --> <!-- -Awarns turns type-checking errors into warnings. -->
							<arg>"-AsuppressWarnings=contracts.conditional.postcondition.not.satisfied"</arg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
					<configuration>
<!--
						<testFailureIgnore>true</testFailureIgnore>
-->
						<excludes>
							<exclude>**/*ModuleTests.java</exclude>
						</excludes>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
				</configuration>
				<executions>
					<execution>
<id>test-jar</id>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <version>3.1.1</version>
				<configuration> <descriptors> <descriptor>assembly.xml</descriptor> </descriptors>
				</configuration> </plugin> -->

			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>.</directory>
							<includes>
<include>**/ajcore.*.txt</include>

								</includes>
<!--
<excludes> <exclude>**/important.log</exclude> <exclude>**/another-important.log</exclude>
								</excludes> -->
							<followSymlinks>false</followSymlinks>
						</fileset>
						<fileset>
							<directory>aj-build</directory>
							<!-- <includes> <include>**/*.tmp</include> <include>**/*.log</include>
								</includes> <excludes> <exclude>**/important.log</exclude> <exclude>**/another-important.log</exclude>
								</excludes> -->
							<followSymlinks>false</followSymlinks>
						</fileset>
					</filesets>
				</configuration>
			</plugin>

			<plugin>
				<!-- This plugin will set properties values using dependency information -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>

	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.6.2</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- Annotations from the Checker Framework: nullness, interning, locking, ... -->
		<dependency>
			<groupId>org.checkerframework</groupId>
			<artifactId>checker-qual</artifactId>
			<version>3.10.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.google.errorprone</groupId>
			<artifactId>javac</artifactId>
			<version>9+181-r4173-1</version>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>checkerframework</id>
			<activation>
				<jdk>[1.8,13)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.1</version>
						<configuration>
							<fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
							<compilerArguments>
								<Xmaxerrs>10000</Xmaxerrs>
								<Xmaxwarns>10000</Xmaxwarns>
							</compilerArguments>
							<annotationProcessorPaths>
								<path>
									<groupId>org.checkerframework</groupId>
									<artifactId>checker</artifactId>
									<version>3.10.1-SNAPSHOT</version>
								</path>
							</annotationProcessorPaths>
							<annotationProcessors>
								<!-- Add all the checkers you want to enable here -->
								<annotationProcessor>org.checkerframework.checker.iteration.IterationChecker</annotationProcessor>
							</annotationProcessors>
							<compilerArgs>
								<!-- <arg>-Awarns</arg> --> <!-- -Awarns turns type-checking errors into warnings. -->
								<arg>"-AsuppressWarnings=contracts.conditional.postcondition.not.satisfied"</arg>
							</compilerArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>org.checkerframework</groupId>
					<artifactId>checker</artifactId>
					<version>3.10.1-SNAPSHOT</version>
				</dependency>
			</dependencies>
		</profile>

		<profile>
			<id>checkerframework-jdk8</id>
			<activation>
				<jdk>1.8</jdk>
			</activation>
			<!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
			<properties>
				<javac.version>9+181-r4173-1</javac.version>
			</properties>
			<dependencies>
				<dependency>
					<groupId>com.google.errorprone</groupId>
					<artifactId>javac</artifactId>
					<version>9+181-r4173-1</version>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<fork>true</fork>
							<compilerArgs combine.children="append">
								<arg>-Xbootclasspath/p:${annotatedJdk}</arg>
								<arg>-J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/${javac.version}/javac-${javac.version}.jar</arg>
							</compilerArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>checkerframework-jdk11</id>
			<activation>
				<jdk>11</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<fork>true</fork>
							<compilerArgs combine.children="append">
								<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
							</compilerArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<properties>
				<!-- Temporary until animal-sniffer-maven-plugin is released with https://github.com/mojohaus/animal-sniffer/pull/91.
                     Version 1.19 is broken:  https://github.com/mojohaus/animal-sniffer/issues/76. -->
				<animal.sniffer.skip>true</animal.sniffer.skip>
			</properties>
		</profile>
	</profiles>

</project>
